[gd_scene load_steps=16 format=2]

[ext_resource path="res://Alien_Red.png" type="Texture" id=1]
[ext_resource path="res://Alien_Green.png" type="Texture" id=2]
[ext_resource path="res://Alien_Purple.png" type="Texture" id=3]
[ext_resource path="res://Alien_Blue_Shield.png" type="Texture" id=4]
[ext_resource path="res://Alien_Blue.png" type="Texture" id=5]
[ext_resource path="res://Alien_Purple_Split.png" type="Texture" id=6]
[ext_resource path="res://Robot.gd" type="Script" id=7]
[ext_resource path="res://laser 1.mp3" type="AudioStream" id=8]
[ext_resource path="res://flamethrower.mp3" type="AudioStream" id=9]
[ext_resource path="res://EdgeOfTheGalaxyRegular-OVEa6.otf" type="DynamicFontData" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Blue (No Shield)",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Red",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Purple",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Blue (Shield)",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Small Purple",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Green",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 36.0139

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 10 )

[node name="Robot" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 1 )
animation = "Blue (Shield)"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Shoot_Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Laser_Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Flame_Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Bomb_Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Small_Bomb_Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Healthbar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -48.0
margin_right = 32.0
margin_bottom = -38.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Flamethrower" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"

[node name="Tips" type="Polygon2D" parent="."]
visible = false
position = Vector2( -75, 40 )
color = Color( 0.482353, 0.956863, 0.415686, 0.823529 )
polygon = PoolVector2Array( 0, 25, 50, 25, 75, 0, 100, 25, 150, 25, 150, 75, 0, 75 )

[node name="RichTextLabel" type="RichTextLabel" parent="Tips"]
margin_left = 5.0
margin_top = 35.0
margin_right = 145.0
margin_bottom = 115.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center] Shoot Robots to Get Gold[/center]"
text = " Shoot Robots to Get Gold"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Shoot_Timer" to="." method="_on_Shoot_Timer_timeout"]
[connection signal="timeout" from="Laser_Timer" to="." method="_on_Laser_Timer_timeout"]
[connection signal="timeout" from="Flame_Timer" to="." method="_on_Flame_Timer_timeout"]
[connection signal="timeout" from="Bomb_Timer" to="." method="_on_Bomb_Timer_timeout"]
[connection signal="timeout" from="Small_Bomb_Timer" to="." method="_on_Small_Bomb_Timer_timeout"]
